test/files/neg/t12155.check
t12155.scala:6: error: erroneous or inaccessible type
class D[A, C](val x: C1[A, _]#Node[C]) {
                              ^
one error found
